# milestone-4-meirthmh777

./: .env  README.md  documenting milestone 4.docx  mbanking_app.sql  pyproject.toml
app/: __init__.py
app/controllers/: UserController.py
app/models/: AccountModel.py  TransactionModel.py  UserModel.py  __init__.py
app/schemas/: AccountSchemas.py  TransactionSchemas.py  UserSchemas.py
app/utils/: connector.py
app/views/: AccountsView.py  LoginView.py  TransactionsView.py  UsersView.py
instance/: data.db
migrations/versions/: 58c2a45959e7_try_migration.py
